# trust-bench

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  Makefile  PROCESS.md  README.md  pyproject.toml
.claude/: README.md  settings.json
.claude/commands/: README.md
.claude/hooks/: README.md  audit-log.sh  block-dangerous-bash.sh  protect-paths.sh  protect-reads.sh
.claude/statusline/: statusline.sh
.github/workflows/: ci.yml
backends_ext/apl/: _sources.sh  dispatch.dyalog  error_result.dyalog  evaluate.dyalog  null.dyalog  run.dyalog  run_harness.sh  run_session.sh  session.dyalog  solve.dyalog
docs/: methodology.md
docs/plans/: persistent-apl-session.md  trust-bench.md
docs/prs/: 10.md  101.md  104.md  107.md  110.md  113.md  114.md  115.md  117.md  119.md  12.md  121.md  123.md  125.md  127.md  128.md  13.md  130.md  133.md  135.md  136.md  138.md  139.md  144.md  148.md  15.md  16.md  17.md  19.md  2.md  20.md  22.md  23.md  24.md  25.md  26.md  27.md  28.md  29.md  3.md  (+25 more)
docs/reviews/: 10.md  101.md  104.md  107.md  110.md  113.md  114.md  115.md  117.md  119.md  12.md  121.md  123.md  125.md  127.md  128.md  13.md  133.md  135.md  136.md  138.md  139.md  144.md  148.md  15.md  16.md  17.md  19.md  2.md  20.md  22.md  23.md  24.md  25.md  26.md  27.md  28.md  29.md  3.md  31.md  (+27 more)
tests/backends/: all_backends.py  test_apl_backend_timeout.py  test_apl_bfgs_newton.py  test_apl_bounds_and_derivative_mode.py  test_apl_difficulty_families.py  test_apl_f_scale.py  test_apl_loss_vocabulary.py  test_apl_parity.py  test_apl_session.py  (+10 more)
trust_bench/: cli.py
(+128 files in other folders)
