[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trust-bench"
version = "0.1.0"
description = "Optimisation-solver comparison harness"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "coverage"]

[tool.setuptools.packages.find]
include = ["trust_bench*"]

[tool.ruff]
line-length = 100
exclude = ["prototype"]
