[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trust-bench"
version = "0.1.0"
description = "Optimisation-solver comparison harness"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = ["numpy", "scipy", "pandas", "matplotlib"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "coverage"]

[tool.setuptools.packages.find]
include = ["trust_bench*"]

[tool.pytest.ini_options]
markers = [
    "slow: not run by `make test`; included in `make coverage` and CI (deselect with -m \"not slow\")",
]

[tool.ruff]
line-length = 100
exclude = ["prototype"]
